--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
     <div class="login_image col-lg-6 col-md-6 col-sm-12">
       <img class="mt-3 mb-2" src="../assets/login_logo.png" alt="">
-      <h3 class="text-info fw-5">Login with Employee Book Portal</h3>
+      <h3 class="text-info fw-5 mt-4 mb-4">Login with Employee Book Portal</h3>
       <p class="text-white">If you not have User id and password,Create your Employee Book portal Account</p>
       <a href="">Sign Up</a>
     </div>
