--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -45,6 +45,9 @@ h3{
     font-family: 'Oswald', sans-serif;
 
 }
+p{
+    font-size: 20px;
+}
 /* -------------main--------------- */
 
 .main {
@@ -62,7 +65,7 @@ h3{
 }
 
 img {
-    width: 40%;
+    width: 35%;
     height: 30%;
 }
 
@@ -70,3 +73,6 @@ img {
     display: flex;
     justify-content: center;
 }
+
+/* ------------fun------------- */
+
