--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
   <div class="main row">
 
     <div class="login_image col-lg-6 col-md-6 col-sm-12">
-      <img class="mt-3 mb-2" src="../assets/login_logo.png" alt="">
+      <img class="mt-4 mb-2" src="../assets/loginuserlogo.png" alt="">
       <h3 class="text-info fw-5 mt-4 mb-4">Login with Employee Book Portal</h3>
-      <p class="text-white">If you not have User id and password,Create your Employee Book portal Account</p>
+      <p class="text-white">If you not have User id and password, Create your Employee Book portal Account</p>
       <a href="">Sign Up</a>
     </div>
 
